--- a/mistral_advpromting.ipynb
+++ b/mistral_advpromting.ipynb
@@ -16,9 +16,7 @@
     "    (\"system\", \"You are an expert in the field. With great analytical skills with focus on a clear and structured communication.You always use data available to back up all your claims. At the start of your answer ALWAYS Provide a yes/no prediction, a probability score, and a confidence level in a JSON format. And then continue with text on the explanation of why you said what you said.\"),\n",
     "    (\"user\", \"{input}\")\n",
     "])\n",
-    "\n",
-    "# Combine prompt template with LLM and output parser\n",
-    "chain = prompt | llm | StrOutputParser()\n"
+    "\n"
    ]
   },
   {
@@ -29,7 +27,9 @@
    "outputs": [],
    "source": [
     "# Initialize mistral with Ollama\n",
-    "llm = Ollama(model=\"mistral\")"
+    "llm = Ollama(model=\"mistral\")",
+    "# Combine prompt template with LLM and output parser\n",
+    "chain = prompt | llm | StrOutputParser()\n"
    ]
   },
   {
