--- a/mistral_advpromting.ipynb
+++ b/mistral_advpromting.ipynb
@@ -27,7 +27,7 @@
    "outputs": [],
    "source": [
     "# Initialize mistral with Ollama\n",
-    "llm = Ollama(model=\"mistral\")"\n,
+    "llm = Ollama(model=\"mistral\")",
     "# Combine prompt template with LLM and output parser\n",
     "chain = prompt | llm | StrOutputParser()\n"
    ]
