--- a/mistral_advpromting.ipynb
+++ b/mistral_advpromting.ipynb
@@ -40,7 +40,7 @@
    "outputs": [],
    "source": [
     "# Initialize llama2 with Ollama\n",
-    "llm = Ollama(model=\"llama2\")"
+    "#llm = Ollama(model=\"llama2\")"
    ]
   },
   {
